v1.2/08-A.CAS_Domain_Invariant_Test_Spec.md
# 08-A. CAS_Domain_Invariant_Test_Spec

## 1. Purpose

CAS의 **도메인 불변식(Domain Invariants)** 을 정의하고, TDD 최상위 레이어(L0)로 검증하기 위한 테스트 규격이다.

도메인 불변식이란 구현·API·UI가 어떻게 바뀌든 **항상 참이어야 하는 명제**다. 하나라도 깨지면 시스템이 잘못된 상태에 있다는 뜻이다.

아래 문서들의 원칙을 테스트로 검증한다.

* 01. Decision & Data Immutability Contract
* 03. Data Model & Snapshot Schema
* 04. Calculation Engine & Cost Rule Spec
* 05. Target & Evaluation Logic Spec
* 10. Ontology Specification

---

## 2. Invariant Taxonomy

| Code      | Category              | Description       |
| --------- | --------------------- | ----------------- |
| INV-DATA  | Data Integrity        | 데이터 정합성 불변식       |
| INV-CALC  | Calculation           | 계산 수학적 불변식        |
| INV-STAGE | Stage                 | Stage/Context 불변식 |
| INV-VIEW  | View                  | View 독립성 불변식      |
| INV-EVAL  | Evaluation            | 평가 결과 불변식         |
| INV-ONTO  | Ontology Consistency  | 온톨로지 정합성 불변식      |

---

## 3. Core Domain Invariants

### 3.1 Data Integrity Invariants (INV-DATA)

#### INV-DATA-001: Snapshot Immutability

**Statement:** 생성 완료된 Snapshot의 모든 값은 변경될 수 없다.

**Formal:**

```
∀ snapshot S, ∀ t1 < t2 : value(S, t1) = value(S, t2)
```

---

#### INV-DATA-002: Snapshot Atomicity

**Statement:** Snapshot은 전체 계산이 성공할 때만 존재한다.

**Formal:**

```
¬Complete(S) ⇒ ¬Exists(S)
```

---

### 3.2 Calculation Invariants (INV-CALC)

#### INV-CALC-001: Total Cost Composition

**Statement:** 총비용은 활성화된 비용 항목들의 합과 항상 일치해야 한다.

**Formal:**

```
TotalCost = Σ ActiveCostComponents
```

---

#### INV-CALC-002: Cost Ratio Definition

**Statement:** 총비용율은 항상 총비용/총매출과 동일하다.

**Formal:**

```
CostRatio = TotalCost / TotalRevenue
```

---

#### INV-CALC-003: Non-negativity of Core Costs

**Statement:** 음수 허용 항목을 제외한 모든 핵심 비용은 음수가 될 수 없다.

**Formal:**

```
∀ c ∈ CoreCosts, c ≥ 0
```

---

### 3.3 Stage Invariants (INV-STAGE)

#### INV-STAGE-001: Linear Stage Progression

**Statement:** 설계원가 n차는 n-1차 Snapshot 없이 생성될 수 없다.

---

#### INV-STAGE-002: Bid as Anchor

**Statement:** Bid Snapshot은 모든 비교와 평가의 유일한 기준(anchor)이다.

---

### 3.4 View Invariants (INV-VIEW)

#### INV-VIEW-001: View Independence

**Statement:** INIT View와 AVG5 View의 계산·평가 결과는 상호 영향을 주지 않는다.

---

#### INV-VIEW-002: View Switch is Pure

**Statement:** View 전환은 Snapshot이나 계산 결과를 변경하지 않는다.

---

### 3.5 Evaluation Invariants (INV-EVAL)

#### INV-EVAL-001: Deterministic Evaluation

**Statement:** 동일 Snapshot, 동일 View는 항상 동일 Evaluation 결과를 가진다.

---

#### INV-EVAL-002: Bid Non-evaluable

**Statement:** Bid Stage는 평가 대상이 아니다.

---

### 3.6 Ontology Consistency Invariants (INV-ONTO)

#### INV-ONTO-001: Triple-Relational Consistency

**Statement:** Triple Store의 모든 트리플은 PostgreSQL의 대응 레코드와 의미적으로 동등해야 한다.

**Formal:**

```
∀ triple T in TripleStore : ∃ record R in PostgreSQL : semanticEqual(T, R)
```

---

#### INV-ONTO-002: Inference-Engine Consistency

**Statement:** SWRL 추론 결과(Derived Value, Evaluation Status)는 계산 엔진의 결과와 항상 일치해야 한다.

**Formal:**

```
∀ metric M, ∀ snapshot S : swrlResult(M, S) = calcEngineResult(M, S)
```

---

#### INV-ONTO-003: SHACL Validation Completeness

**Statement:** 유효한 Snapshot은 모든 SHACL Shape 검증을 통과해야 한다.

**Formal:**

```
∀ snapshot S : isValid(S) ⇒ shaclValidate(S) = PASS
```

---

#### INV-ONTO-004: Ontology Closed-World Assumption

**Statement:** Triple Store에 명시적으로 기록되지 않은 사실은 거짓으로 간주되어야 한다.

**Formal:**

```
¬Asserted(fact) ∧ ¬Inferred(fact) ⇒ ¬Holds(fact)
```

---

## 4. TDD Execution Rules

* 모든 Invariant는 **Unit Test로 구현 가능**해야 한다.
* Invariant Test 실패 시, 하위 테스트(L1~L4)는 실행하지 않는다.
* Invariant는 테스트 코드에서 **수학적 명제로 표현**되어야 한다.

---

## 5. Failure Severity

| Invariant Category | Severity | Action       |
| ------------------ | -------- | ------------ |
| INV-DATA           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-CALC           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-STAGE          | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-VIEW           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-EVAL           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-ONTO           | BLOCKER  | 즉시 수정, 배포 불가 |

모든 Invariant Category의 Severity가 BLOCKER인 이유는, 논리 정합성이 깨진 상태로는 배포하면 안 되기 때문이다.
