v1.3/08-A.CAS_Domain_Invariant_Test_Spec.md
# 08-A. CAS_Domain_Invariant_Test_Spec

## 1. Purpose

CAS의 **도메인 불변식(Domain Invariants)** 을 정의하고, TDD 최상위 레이어(L0)로 검증하기 위한 테스트 규격이다.

도메인 불변식이란 구현·API·UI가 어떻게 바뀌든 **항상 참이어야 하는 명제**다. 하나라도 깨지면 시스템이 잘못된 상태에 있다는 뜻이다.

아래 문서들의 원칙을 테스트로 검증한다.

* 01. Decision & Data Immutability Contract
* 03. Data Model & Snapshot Schema
* 04. Calculation Engine & Cost Rule Spec
* 05. Target & Evaluation Logic Spec
* 10. Constraint & Validation Spec

---

## 2. Invariant Taxonomy

| Code      | Category       | Description       |
| --------- | -------------- | ----------------- |
| INV-DATA  | Data Integrity | 데이터 정합성 불변식       |
| INV-CALC  | Calculation    | 계산 수학적 불변식        |
| INV-STAGE | Stage          | Stage/Context 불변식 |
| INV-VIEW  | View           | View 독립성 불변식      |
| INV-EVAL  | Evaluation     | 평가 결과 불변식         |
| INV-AGG   | Aggregation    | 품번→차종 집계 불변식      |

> **v1.3 변경:** v1.2의 `INV-ONTO`(Ontology Consistency) 카테고리 제거. 온톨로지 정합성 검증은 더 이상 필요하지 않다. 대신 `INV-AGG`(Aggregation) 카테고리 추가.

---

## 3. Core Domain Invariants

### 3.1 Data Integrity Invariants (INV-DATA)

#### INV-DATA-001: Snapshot Immutability

**Statement:** 생성 완료된 Snapshot의 모든 값은 변경될 수 없다.

**Formal:**

```
∀ snapshot S, ∀ t1 < t2 : value(S, t1) = value(S, t2)
```

**Test:** DB Trigger가 UPDATE/DELETE를 차단하는지 확인.

---

#### INV-DATA-002: Snapshot Atomicity

**Statement:** Snapshot은 전체 계산이 성공할 때만 존재한다.

**Formal:**

```
¬Complete(S) ⇒ ¬Exists(S)
```

**Test:** 계산 중 하나라도 실패하면 Snapshot이 롤백되는지 확인.

---

#### INV-DATA-003: Bid Snapshot Uniqueness

**Statement:** 각 Vehicle은 정확히 하나의 Bid Snapshot만 가진다.

**Formal:**

```
∀ vehicle V : count(snapshots(V, type=BID)) ≤ 1
```

> **v1.3 추가:** 03 §2.3의 규칙을 명시적 불변식으로 격상.

---

### 3.2 Calculation Invariants (INV-CALC)

#### INV-CALC-001: Total Cost Composition

**Statement:** 총비용은 활성화된 비용 항목들의 합과 항상 일치해야 한다.

**Formal:**

```
TotalCost = Σ ActiveCostComponents
```

---

#### INV-CALC-002: Cost Ratio Definition

**Statement:** 총비용율은 항상 총비용/총매출과 동일하다.

**Formal:**

```
CostRatio = TotalCost / TotalRevenue
```

---

#### INV-CALC-003: Non-negativity of Core Costs

**Statement:** 음수 허용 항목(CASHBACK, DEV_REC)을 제외한 모든 핵심 비용은 음수가 될 수 없다.

**Formal:**

```
∀ c ∈ CoreCosts, c ≥ 0
```

---

#### INV-CALC-004: Total Cost includes CUSTOMS

**Statement:** 표준 총비용에는 관세(CUSTOMS)가 항상 포함된다.

**Formal:**

```
TotalCost = MAT_UNIT + ASM_UNIT + LOG_UNIT + PKG_UNIT + CUSTOMS
```

> **v1.3 추가:** v1.2에서 SWRL-CALC-002와 본문 산식 간 관세 포함 여부 불일치가 있었던 문제를 불변식으로 명시.

---

#### INV-CALC-005: Multi CR Monotonic Decrease

**Statement:** Multi CR 적용 시 판매가는 연차가 증가함에 따라 단조 감소(또는 유지)해야 한다.

**Formal:**

```
∀ year N, N ≥ 2 : 판매가[N] ≤ 판매가[N-1]  (when CR% ≥ 0)
```

> **v1.3 추가:** Multi CR 로직의 수학적 성질을 불변식으로 명시.

---

### 3.3 Stage Invariants (INV-STAGE)

#### INV-STAGE-001: Linear Stage Progression

**Statement:** 설계원가 n차는 n-1차 Snapshot 없이 생성될 수 없다.

---

#### INV-STAGE-002: Bid as Anchor

**Statement:** Bid Snapshot은 모든 비교와 평가의 유일한 기준(anchor)이다.

---

#### INV-STAGE-003: Post-SOP Sequential Order

**Statement:** Post-SOP Snapshot N은 반드시 Post-SOP Snapshot N-1(또는 SOP Snapshot)을 base_snapshot_id로 참조해야 한다.

> **v1.3 추가:** v1.2에서 Post-SOP의 stage_order 중복 문제를 해결한 후 추가된 불변식.

---

### 3.4 View Invariants (INV-VIEW)

#### INV-VIEW-001: View Independence

**Statement:** INIT View와 AVG5 View의 계산·평가 결과는 상호 영향을 주지 않는다.

---

#### INV-VIEW-002: View Switch is Pure

**Statement:** View 전환은 Snapshot이나 계산 결과를 변경하지 않는다.

---

### 3.5 Evaluation Invariants (INV-EVAL)

#### INV-EVAL-001: Deterministic Evaluation

**Statement:** 동일 Snapshot, 동일 View는 항상 동일 Evaluation 결과를 가진다.

---

#### INV-EVAL-002: Bid Non-evaluable

**Statement:** Bid Stage는 평가 대상이 아니다.

---

#### INV-EVAL-003: Status Exhaustive Classification

**Statement:** 모든 Evaluation Result는 반드시 GREEN, YELLOW, RED 중 하나의 상태를 가진다. 상태 없음(null)이나 기타 상태는 허용되지 않는다.

> **v1.3 추가:** 평가 결과의 완전성을 불변식으로 명시.

---

### 3.6 Aggregation Invariants (INV-AGG)

> **v1.3 신규 카테고리:** 품번(Part) → 차종(Vehicle) 집계 무결성 검증.

#### INV-AGG-001: Part-Vehicle Consistency

**Statement:** 품번이 존재하는 Vehicle의 경우, 차종 서머리(SnapshotCostValue)는 품번 상세(PartCostValue)의 집계와 일치해야 한다.

**Formal:**

```
∀ snapshot S, ∀ costComponent C :
  vehicleCost(S, C) = SUM(partCost(S, part_i, C) × usage(part_i))
```

---

#### INV-AGG-002: Aggregation Completeness

**Statement:** Snapshot에 포함된 모든 Part에 대해 PartCostValue가 존재해야 한다.

**Formal:**

```
∀ snapshot S, ∀ part P in vehicle(S) : ∃ partCostValue(S, P)
```

---

## 4. TDD Execution Rules

* 모든 Invariant는 **Unit Test로 구현 가능**해야 한다.
* Invariant Test 실패 시, 하위 테스트(L1~L2)는 실행하지 않는다.
* Invariant는 테스트 코드에서 **수학적 명제로 표현**되어야 한다.

---

## 5. Failure Severity

| Invariant Category | Severity | Action       |
| ------------------ | -------- | ------------ |
| INV-DATA           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-CALC           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-STAGE          | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-VIEW           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-EVAL           | BLOCKER  | 즉시 수정, 배포 불가 |
| INV-AGG            | BLOCKER  | 즉시 수정, 배포 불가 |

모든 Invariant Category의 Severity가 BLOCKER인 이유는, 논리 정합성이 깨진 상태로는 배포하면 안 되기 때문이다.
